--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16.png">
 
