saint-lascivious.github.io: colour
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   filtereddns.html
 - modified:   index.html
 - modified:   pokedexoverdns.html
 - modified:   resources/stylesheets/sainternet.css

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  sainternet.xyz - /404.html
+  sainternet.xyz - 404.html
   Copyright 2022 saint-lascivious (Hayden Pearce). All rights reserved.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -54,7 +54,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
     <style>
@@ -76,16 +76,16 @@
           <span class="mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="#pokemon404">Pokémon #404</a>
-            <a class="mdl-navigation__link" href="#example">Example Queries</a>
+            <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+            <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="https://sainternet.xyz/404.html#pokemon404">Pokémon #404</a>
-          <a class="mdl-navigation__link" href="https://sainternet.xyz/404.html#example">Example Queries</a>
+          <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+          <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
       </div>
       <div class="lux-ribbon"></div>
@@ -144,7 +144,7 @@ nslookup -type=txt 404.pokedex dns.sainternet.xyz
         </footer>
       </main>
     </div>
-    <a href="index.html" target="_blank" "rel=noopener noreferrer" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
+    <a href="https://sainternet.xyz" target="_blank" "rel=noopener noreferrer" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
