saint-lascivious.github.io: drawer test
add github, highlight current page

Changes to be committed:
 - modified:   filtereddns.html
 - modified:   index.html
 - modified:   pokedexoverdns.html

--- a/filtereddns.html
+++ b/filtereddns.html
@@ -76,7 +76,7 @@
           <span class="mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="#">Filtered DNS</a>
+            <a class="mdl-navigation__link" href=""><b>Filtered DNS</b></a>
             <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
         </div>
@@ -84,7 +84,7 @@
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="#">Filtered DNS</a>
+          <a class="mdl-navigation__link" href=""><b>Filtered DNS</b></a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
       </div>
