--- a/index.html
+++ b/index.html
@@ -87,22 +87,29 @@
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
+        <span class="mdl-layout-title">GitHub</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
+        </nav>
       </div>
       <div class="sainternet-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="welcome">Welcome to Sainternet</h3>
+            <h3 id="welcome">Welcome</h3>
               <picture>
                 <source srcset="resources/images/wurmple-shiny.png" media="(prefers-color-scheme: dark)">
                 <img src="resources/images/wurmple.png" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
               </picture>
-              <p>
+              <p align="center">
                 Welcome to Sainternet.
               </p>
               <p>
-                I'm saint (Hayden Pearce), and I make (and break) things on the internet sometimes. This could be considered one of them.
+                Hello, I'm saint (Hayden Pearce). I make (and break) things on the internet sometimes.
+              </p>
+              <p>
+                This site could be considered one of those things.
               </p>
           </div>
         </div>
