--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -77,7 +77,7 @@
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-            <a class="mdl-navigation__link" href="#">Pokédex over DNS</a>
+            <a class="mdl-navigation__link" href=""><b>Pokédex over DNS</b></a>
           </nav>
         </div>
       </header>
@@ -85,7 +85,7 @@
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="#">Pokédex over DNS</a>
+          <a class="mdl-navigation__link" href=""><b>Pokédex over DNS</b></a>
         </nav>
       </div>
       <div class="dex-ribbon"></div>
