--- a/265.html
+++ b/265.html
@@ -87,6 +87,12 @@
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
+        <span class="mdl-layout-title">GitHub</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
+          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
+          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
+        </nav>
       </div>
       <div class="wurm-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
@@ -144,7 +150,7 @@ nslookup -type=txt 265.pokedex dns.sainternet.xyz
         </footer>
       </main>
     </div>
-    <a href="https://sainternet.xyz" target="_blank" "rel=noopener noreferrer" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
