--- a/filtereddns.html
+++ b/filtereddns.html
@@ -58,7 +58,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
     <style>
-    #button_report {
+    #button_home {
       position: fixed;
       display: block;
       right: 0;
@@ -86,6 +86,12 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href=""><b>Filtered DNS</b></a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+        </nav>
+        <span class="mdl-layout-title">GitHub</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
+          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
+          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
         </nav>
       </div>
       <div class="dns-ribbon"></div>
@@ -165,7 +171,7 @@
         </footer>
       </main>
     </div>
-    <a href="mailto:admin@sainternet.xyz?subject=Bug%20Report&body=Enter%20sainternet.xyz%20Bug%20Report%20text%20here" target="_blank" "rel=noopener noreferrer" id="button_report" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Report</a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
