--- a/index.html
+++ b/index.html
@@ -57,17 +57,6 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
-    <style>
-    #button_report {
-      position: fixed;
-      display: block;
-      right: 0;
-      bottom: 0;
-      margin-right: 30px;
-      margin-bottom: 30px;
-      z-index: 900;
-    }
-    </style>
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -89,7 +78,9 @@
         </nav>
         <span class="mdl-layout-title">GitHub</span>
         <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
           <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
+          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
         </nav>
       </div>
       <div class="sainternet-ribbon"></div>
@@ -100,13 +91,13 @@
             <h3 id="welcome">Welcome</h3>
               <picture>
                 <source srcset="resources/images/wurmple-shiny.png" media="(prefers-color-scheme: dark)">
-                <img src="resources/images/wurmple.png" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.">
+                <img src="resources/images/wurmple.png" alt="Image supplied not illustrative, the author is not a Pokémon.">
               </picture>
               <p align="center">
                 Welcome to Sainternet.
               </p>
               <p>
-                Hello, I'm saint (Hayden Pearce). I make (and break) things on the internet sometimes.
+                Hello, I'm saint (aka. Hayden Pearce), and I make (and break) things on the internet sometimes.
               </p>
               <p>
                 This site could be considered one of those things.
@@ -125,7 +116,6 @@
         </footer>
       </main>
     </div>
-    <a href="mailto:admin@sainternet.xyz?subject=Bug%20Report&body=Enter%20sainternet.xyz%20Bug%20Report%20text%20here" target="_blank" "rel=noopener noreferrer" id="button_report" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Report</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
