saint-lascivious.github.io: better crumbs, split stylesheets
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutfiltereddns.html
 - modified:   filtereddns.html
 - modified:   index.html
 - modified:   pokedexoverdns.html
 - new file:   resources/stylesheets/img.css
 - new file:   resources/stylesheets/pre.css
 - new file:   resources/stylesheets/ribbons.css
 - modified:   resources/stylesheets/sainternet.css
 - new file:   resources/stylesheets/table.css

--- a/265.html
+++ b/265.html
@@ -56,6 +56,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.pink-red.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/img.css">
+    <link rel="stylesheet" href="resources/stylesheets/pre.css">
+    <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
     <style>
     #button_home {
@@ -100,7 +103,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="#pokemon265">Pokémon #265</a> ; <a href="#example">Example Queries</a>
+              <a href="index.html">Home</a> &gt; <a href="#pokemon265"><b>Pokémon #265</b></a> ; <a href="#example">Example Queries</a>
             </div>
           </div>
         </div>
