--- a/aboutfiltereddns.html
+++ b/aboutfiltereddns.html
@@ -56,6 +56,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-red.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
     <style>
     #button_home {
@@ -85,6 +86,7 @@
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+          <a class="mdl-navigation__link" href=""> - <b>About Filtered DNS</b></a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
@@ -100,7 +102,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#aboutfilteredddns">About Filtered DNS</a> ; <a href="#dnsdist">dnsdist</a> ; <a href="#dnsproxy">dnsproxy</a> ; <a href="#piholeftl">pihole-FTL</a> ; <a href="#unbound">unbound</a>
+              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#aboutfiltereddns"><b>About Filtered DNS</b></a> ; <a href="#dnsdist">dnsdist</a> ; <a href="#dnsproxy">dnsproxy</a> ; <a href="#piholeftl">pihole-FTL</a> ; <a href="#unbound">unbound</a>
             </div>
           </div>
         </div>
