--- a/filtereddns.html
+++ b/filtereddns.html
@@ -56,7 +56,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-red.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
+    <link rel="stylesheet" href="resources/stylesheets/table.css">
     <style>
     #button_home {
       position: fixed;
@@ -100,7 +102,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="#filtereddns">Filtered DNS</a>
+              <a href="index.html">Home</a> &gt; <a href="#filtereddns"><b>Filtered DNS</b></a> &gt; <a href="aboutfiltereddns.html">About Filtered DNS</a>
             </div>
           </div>
         </div>
