--- a/404.html
+++ b/404.html
@@ -103,7 +103,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="#pokemon404"><b>Pokémon #404</b></a> ; <a href="#example">Example Queries</a>
+              <a href="index.html">Home</a> &gt; <a href="#pokemon404"><b>Pokémon #404</b></a><br><a href="#example">Example Queries</a>
             </div>
           </div>
         </div>
