--- a/aboutfiltereddns.html
+++ b/aboutfiltereddns.html
@@ -102,7 +102,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#aboutfiltereddns"><b>About Filtered DNS</b></a> ; <a href="#dnsdist">dnsdist</a> ; <a href="#dnsproxy">dnsproxy</a> ; <a href="#piholeftl">pihole-FTL</a> ; <a href="#unbound">unbound</a>
+              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#aboutfiltereddns"><b>About Filtered DNS</b></a><br><a href="#dnsdist">dnsdist</a>, <a href="#dnsproxy">dnsproxy</a>, <a href="#piholeftl">pihole-FTL</a>, <a href="#unbound">unbound</a>
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="aboutfiltereddns">About Filtered DNS</h3>
               <p>
-                Sainternet Filtered DNS is using the following technologies.
+                Sainternet Filtered DNS is made possible using, but neither endorsed nor condoned by, the following projects.
               </p>
            </div>
         </div>
@@ -123,7 +123,7 @@
                 <a href="https://github.com/PowerDNS/pdns/blob/master/pdns/README-dnsdist.md">dnsdist</a>
               </p>
               <p>
-                dnsdist is a highly DNS-, DoS- and abuse-aware loadbalancer. Its goal in life is to route traffic to the best server, delivering top performance to legitimate users while shunting or blocking abusive traffic.
+                dnsdist is a highly DNS-, <a href="https://wikipedia.org/wiki/Denial-of-service_attack">DoS</a>- and abuse-aware loadbalancer. Its goal in life is to route traffic to the best server, delivering top performance to legitimate users while shunting or blocking abusive traffic.
               </p>
            </div>
         </div>
