--- a/filtereddns.html
+++ b/filtereddns.html
@@ -87,6 +87,7 @@
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href=""><b>Filtered DNS</b></a>
+          <a class="mdl-navigation__link" href="aboutfiltereddns.html"> - About Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
@@ -102,7 +103,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="#filtereddns"><b>Filtered DNS</b></a> &gt; <a href="aboutfiltereddns.html">About Filtered DNS</a>
+              <a href="index.html">Home</a> &gt; <a href="#filtereddns"><b>Filtered DNS</b></a>
             </div>
           </div>
         </div>
