--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -79,7 +79,7 @@
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-            <a class="mdl-navigation__link" href=""><b>Pokédex over DNS</b></a>
+            <a class="mdl-navigation__link" href="#pokedexoverdns"><b>Pokédex over DNS</b></a>
           </nav>
         </div>
       </header>
