saint-lascivious.github.io: ui stuffs
secondary colours, home in drawer, center crumbs
reduce dropshadows nearer screen top
dont refer to favicon.ico

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutfiltereddns.html
 - modified:   filtereddns.html
 - modified:   index.html
 - modified:   pokedexoverdns.html
 - modified:   resources/stylesheets/ribbons.css
 - modified:   resources/stylesheets/sainternet.css

--- a/aboutfiltereddns.html
+++ b/aboutfiltereddns.html
@@ -43,7 +43,6 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16.png">
 
@@ -72,7 +71,7 @@
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--16dp">
+      <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -85,6 +84,7 @@
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href=""> - <b>About Filtered DNS</b></a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
@@ -100,7 +100,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
               <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#aboutfiltereddns"><b>About Filtered DNS</b></a><br><a href="#dnsdist">dnsdist</a>, <a href="#dnsproxy">dnsproxy</a>, <a href="#piholeftl">pihole-FTL</a>, <a href="#unbound">unbound</a>
             </div>
