--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16.png">
 
@@ -62,7 +61,7 @@
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--16dp">
+      <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -85,7 +84,7 @@
           <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
         </nav>
       </div>
-      <div class="sainternet-ribbon"></div>
+      <div class="home-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
