--- a/404.html
+++ b/404.html
@@ -43,7 +43,6 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16.png">
 
@@ -74,7 +73,7 @@
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--16dp">
+      <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -87,6 +86,7 @@
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
@@ -101,7 +101,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
               <a href="index.html">Home</a> &gt; <a href="#pokemon404"><b>Pokémon #404</b></a><br><a href="#example">Example Queries</a>
             </div>
