saint-lascivious.github.io: add dummy home to index drawer
Changes to be committed:
 - modified:   index.html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href=""><b>Home</b></a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
